added images and links to header/footer

--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
 <header>
     <link rel="stylesheet" type="text/css" href="main.css">
-
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <title>Google</title>
 </header>
 <body>
     <nav>
-        <div id="nav-left">About Store</div>
-        <div id="nav-right">Gmail Images Box Icon</div>
+        <div id="nav-left"><a href="#">About</a> <a href="#">Store</a></div>
+        <div id="nav-right"><a href="#">Gmail</a> <a href="#">Images</a> <a href="#"><i class="material-icons">apps</i></a> <a href="#"></a><a href="#"><img src="avatar.bmp"></a></div>
     </nav>
     <div id="logo">
         <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google's Logo" />
@@ -22,10 +23,10 @@
     </div>
     <div id="footer">
         <div id="footer-left">
-            Advertising Business How Search Works
+            <a href="#">Advertising</a> <a href="#">Business</a> <a href="#">How Search Works</a>
         </div>
         <div id="footer-right">
-            Privacy Terms Settings
+            <a href="#">Privacy</a> <a href="#">Terms</a> <a href="#">Settings</a>
         </div>
     </div>
 </body>
